--- a/Skynet-lib.vcproj
+++ b/Skynet-lib.vcproj
@@ -83,7 +83,7 @@
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
-			ConfigurationType="4"
+			ConfigurationType="2"
 			CharacterSet="2"
 			WholeProgramOptimization="1"
 			>
@@ -125,10 +125,15 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLibrarianTool"
+				Name="VCLinkerTool"
+				AdditionalDependencies="BWAPI.lib"
+				AdditionalLibraryDirectories="&quot;$(BOOST_DIR)\lib\&quot;;&quot;$(BWAPI_DIR)\lib\&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -140,8 +145,12 @@
 				Name="VCFxCopTool"
 			/>
 			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="if not &quot;%BWAPIData%&quot; == &quot;&quot; (&#x0D;&#x0A;copy &quot;$(TargetPath)&quot; &quot;%BWAPIData%\AI\&quot;&#x0D;&#x0A;copy &quot;..\bwapi.ini&quot; &quot;%BWAPIData%&quot;&#x0D;&#x0A;)&#x0D;&#x0A;"
+				CommandLine="if not &quot;%BWAPIData%&quot; == &quot;&quot; (&#x0D;&#x0A;copy &quot;$(TargetPath)&quot; &quot;%BWAPIData%\AI\&quot;&#x0D;&#x0A;copy &quot;..\bwapi.ini&quot; &quot;%BWAPIData%&quot;&#x0D;&#x0A;)"
+				ExcludedFromBuild="true"
 			/>
 		</Configuration>
 		<Configuration
